# python-eventbus

./: .editorconfig  .pre-commit-config.yaml  .yamlfmt  cliff.toml  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: docs.yml
docs/: api.md
src/eventbus/: __init__.py
