[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Francisco R. Del Roio <francipvb@hotmail.com>"]
description = ""
name = "python-eventbus"
packages = [{include = "eventbus", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.353"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"
ruff = "^0.3.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.5.13"}
mkdocs-typer = "^0.0.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  # Documentation-related checks:
  "D",
  # Quoting checks
  "Q",
  # Ruff specific checks
  "RUF",
  # Security-related checks
  "S",
  # Possibly buggy pattern checks:
  "B",
  # Builtin-related checks:
  "A",
  # Function and method argument checks:
  "ARG",
  # Comma checks:
  "COM",
  # List compreension checks:
  "C4",
  # Datetime and timezone checks:
  "DTZ",
  # EChecks related to error messages:
  "EM",
  # Logging messages:
  "G",
  "LOG",
  # Misc bug checks:
  "PIE",
  "PYI",
  "SIM",
  # Ban any print statements:
  "T20",
  # Pytest related checks:
  "PT",
  # Exception-related checks:
  "RSE",
  "TRY",
  # Task-related checks:
  "TD",
  "FIX",
  # Performance checks:
  "PERF",
]

[tool.ruff.lint.extend-per-file-ignores]
"src/tests/**/*.py" = ["D104"]
"src/tests/**/test_*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
